--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ footer{border-top:1px solid var(--stroke); padding:40px 0; color:var(--muted)}
         <div class="cta-row">
           <a class="btn btn-primary" href="https://discord.gg/dneizone" target="_blank">Dneizone</a>
           <a class="btn btn-primary" href="https://discord.gg/TasNhDNfg8" target="_blank">OGSWARE</a>
-          <a class="btn btn-primary" href="https://discord.gg/placeholder" target="_blank">Placeholder</a>
+          <a class="btn btn-primary" href="https://discord.gg/mVZkWPbMcA" target="_blank">NextGenToolz</a>
         </div>
       </div>
 
@@ -200,7 +200,7 @@ footer{border-top:1px solid var(--stroke); padding:40px 0; color:var(--muted)}
         <div class="cta-row">
           <a class="btn btn-primary" href="https://discord.gg/dneizone" target="_blank">Dneizone</a>
           <a class="btn btn-primary" href="https://discord.gg/TasNhDNfg8" target="_blank">OGSWAREr</a>
-          <a class="btn btn-primary" href="https://discord.gg/placeholder" target="_blank">Placeholder</a>
+          <a class="btn btn-primary" href="https://discord.gg/mVZkWPbMcA" target="_blank">NextGenToolz</a>
         </div>
       </div>
 
@@ -212,7 +212,7 @@ footer{border-top:1px solid var(--stroke); padding:40px 0; color:var(--muted)}
         <div class="cta-row">
           <a class="btn btn-primary" href="https://discord.gg/dneizone" target="_blank">Dneizone</a>
           <a class="btn btn-primary" href="https://discord.gg/TasNhDNfg8" target="_blank">OGSWARE</a>
-          <a class="btn btn-primary" href="https://discord.gg/placeholder" target="_blank">Placeholder</a>
+          <a class="btn btn-primary" href="https://discord.gg/mVZkWPbMcA" target="_blank">NextGenToolz</a>
         </div>
       </div>
 
